--- a/public/login/login.html
+++ b/public/login/login.html
@@ -13,8 +13,8 @@
         <!-- <img src="/signup1.png?v=2" alt=""></div> -->
 
         <div class="container">
-            <h1>Teatly</h1>
-            <h5>Start your journey with Teatly</h5>
+            <h1>Shalom</h1>
+            <h5>Start your journey</h5>
             <div class="form-box">
                 <form action="" id="form">
                     <div id="errMessage" style="display: none"></div>
